--- a/public/js/components/SourceSearch.css
+++ b/public/js/components/SourceSearch.css
@@ -18,3 +18,11 @@
 .search-container .autocomplete {
   flex: 1;
 }
+
+.searchinput-container {
+  display: flex;
+}
+
+.searchinput-container .close-btn-big {
+  border-bottom: 1px solid var(--theme-splitter-color);
+}
